--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <title>Recomendaciones Anónimas: Inicio</title>
+        <meta name="keywords" content="ranking, recomendaciones, películas, series">
+        <meta name="description" content="Las mejores recomendaciones de películas y series para ver.">
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         
-        <link rel="stylesheet" href="./css/main.css">
+        <link rel="stylesheet" href="./css/scss/estilos.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -100,8 +103,8 @@
           </section>
 
           <section>
-            <h1 class="text-bg-primary text-center">¿Tienes ganas de hacer algo distinto fuera del sillón?</h1>
-            <h2 class="text-bg-dark text-center">¡Te invitamos a revisar la cartelera de tus cines favoritos!</h2>
+            <h1 class="parrafo text-center">¿Tienes ganas de hacer algo distinto fuera del sillón?</h1>
+            <h2 class="parrafo text-center">¡Te invitamos a revisar la cartelera de tus cines favoritos!</h2>
             <div class="row pt-5 pb-5 mar-5">
               <div class="col-md-3">
                 <div class="card">
