para entrega final

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html">RA</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,19 +28,19 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                  <li class="nav-item">
+                  <li class="scale-up-hor-left nav-item">
                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="scale-up-hor-left nav-item">
                     <a class="nav-link" href="./pages/quienes.html">Sobre RA</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="scale-up-hor-left nav-item">
                     <a class="nav-link" href="./pages/series.html">Series</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="scale-up-hor-left nav-item">
                     <a class="nav-link" href="./pages/peliculas.html">Películas</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="scale-up-hor-left nav-item">
                     <a class="nav-link" href="./pages/contacto.html">¡Contáctanos!</a>
                   </li>
                 </ul>
@@ -51,7 +51,7 @@
           <main>
             <section class="seccionprincipal tracking-in-expand">
               <div class="row">
-                <h1 class="tituloprincipal pt-5 pb-5 text-center align-items-center">Recomendaciones Anónimas</h1>
+                <h1 class="titulo tituloprincipal pt-5 pb-5 text-center align-items-center">Recomendaciones Anónimas</h1>
                 <div class="col-md-12">
                   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -103,7 +103,7 @@
           </section>
 
           <section>
-            <h1 class="parrafo text-center">¿Tienes ganas de hacer algo distinto fuera del sillón?</h1>
+            <h1 class="titulo text-center">¿Tienes ganas de hacer algo distinto fuera del sillón?</h1>
             <h2 class="parrafo text-center">¡Te invitamos a revisar la cartelera de tus cines favoritos!</h2>
             <div class="row pt-5 pb-5 mar-5">
               <div class="col-md-3">
@@ -137,7 +137,7 @@
           </section>
 
           <footer>
-            <div class="footertext text-center text-bg-dark">
+            <div class="footertext text-center">
               <h3> RA: Recomendaciones Anónimas</h2>
               <h4>2023. Todos los derechos reservados</h3>
               <a href="https://instagram.com"><i class="bi bi-instagram"></i></a>
