--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">RA</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,74 +41,79 @@
           </nav>
 
       <div class="container pt-5 pb-5">
-        <h1 class="text-center tracking-in-expand">Películas</h1>
+        <h1 class="titulo text-center tracking-in-expand">Películas</h1>
         <p class="parrafo text-center">¿Te gustaría ver algo breve y que te quite el sueño? ¡No importa el género! Vamos a darte una lista de recomendaciones de las cintas más aclamadas del último tiempo.</p>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/pelicula1.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Película 1</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+                <h5 class="card-title text-center pt-5">Cadena perpetua (1994)</h5>
+                <p class="card-text text-center">En 1947, Andy Dufresne, un joven banquero, es condenado a cadena perpetua por asesinar a su esposa y su amante. A pesar de declararse inocente, es encarcelado en Shawshank, el penitenciario más duro del estado de Maine. Allí se encontrará con Red Redding, un hombre desilusionado, encarcelado desde hace más de veinte años. Es cuando empieza una gran historia de amistad entre los dos hombres, sin un pasado, un presente y un futuro. Andy Dufresne no tendrá más remedio que ir haciéndose a la idea de su terrible situación, donde, por lo menos, su compañero Redding le será de gran ayuda. </p>
+                <p class="card-text"><small class="text-muted">Resumen extraido de: https://www.sensacine.com/peliculas/pelicula-11736/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
               </div>
             </div>
           </div>
         </div>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/pelicula2.webp" class="img-fluid rounded-start mt-4 mb-4" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Película 2</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+                <h5 class="card-title text-center pt-5">El padrino (1972)</h5>
+                <p class="card-text text-center">En el verano de 1945, se celebra la boda de Connie y Carlo Rizzi. Connie es la única hija de Don Vito Corleone, jefe de una de las familias que ejercen el mando de la Cosa Nostra en la ciudad de Nueva York. Don Vito además tiene otros tres hijos: su primogénito Sonny, el endeble Fredo y el más joven se todos, Michael, un marine condecorado por su lucha en la Segunda Guerra Mundial que acaba de regresar a su hogar en Nueva York. Por designios de la fortuna, Michael terminará llevando la vida que no deseaba, tomando las riendas del negocio familiar, cambiando su moral y sus valores, para defender a toda costa a su familia.</p>
+                <p class="card-text"><small class="text-muted">Resumen extraido de: https://www.sensacine.com/peliculas/pelicula-1628/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
               </div>
             </div>
           </div>
         </div>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/pelicula3.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Película 3</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+                <h5 class="card-title text-center pt-5">El caballero oscuro (2008)</h5>
+                <p class="card-text text-center">Después de derrotar a la Orden de las Sombras y frustrar al jefe de la mafia Carmine Falcone en 'Batman Begins', Bruce Wayne vuelve a enfundarse el traje del hombre murciélago para combatir el crimen en Gotham. Sin embargo, la llegada de un nuevo villano a la ciudad destruirá todos los planes de Batman. Se trata de El Joker, un psicópata retorcido y sádico, con una morbosa fascinación por todo lo que rodea al murciélago. Pronto comenzará a sembrar el pánico y a causar estragos en Gotham, convirtiéndose en el peor enemigo posible para El caballero oscuro.</p>
+                <p class="card-text"><small class="text-muted">Resumen extraido de: https://www.sensacine.com/peliculas/pelicula-115362/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
               </div>
             </div>
           </div>
         </div>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/pelicula4.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Película 4</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+                <h5 class="card-title text-center pt-5">El padrino. Parte II (1974)</h5>
+                <p class="card-text text-center">Tras la muerte de Don Vito Corleone, su hijo Michael se convierte en el cabeza de familia. Al tener que negociar con la mafia judía, pierde el apoyo de uno de sus hombres, Frankie Pentageli. Tras escapar por los pelos de un atentado, Michael trata de encontrar al culpable, siendo su mayor sospechoso Hyman Roth, el jefe de la mafia judía.</p>
+                <p class="card-text"><small class="text-muted">Resumen extraido de: https://www.sensacine.com/peliculas/pelicula-28201/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
               </div>
             </div>
           </div>
         </div>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/pelicula5.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Película 5</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+                <h5 class="card-title text-center pt-5">12 hombres sin piedad (1957)</h5>
+                <p class="card-text">Los doce integrantes de un jurado deben decidir sobre la inocencia o culpabilidad de un joven acusado de matar a su padre. En caso de que le consideren autor del asesinato, la sentencia conllevará la pena de muerte. El veredicto debe ser unánime. Con esta premisa inicial comienzan las deliberaciones del jurado, que parecen encaminadas hacia un fallo de culpabilidad. Sin embargo, uno de los miembros del jurado cree que el acusado es inocente, provocando que no se llegue a un acuerdo. En sus argumentaciones, estos doce hombres revelan sus personalidades, peripecias vitales y los prejuicios que les llevan a sostener sus distintos puntos de vista. La responsabilidad que tienen entre manos, la vida de una persona, se deja notar en el peso de la decisión final.</p>
+                <p class="card-text"><small class="text-muted">Resumen extraido de: https://www.sensacine.com/peliculas/pelicula-4063/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
               </div>
             </div>
           </div>
@@ -117,7 +122,7 @@
       </div>
 
       <footer>
-        <div class="footertext text-center text-bg-dark">
+        <div class="footertext text-center">
           <h3> RA: Recomendaciones Anónimas</h2>
           <h4>2023. Todos los derechos reservados</h3>
           <a href="https://instagram.com"><i class="bi bi-instagram"></i></a>
