--- a/pages/series.html
+++ b/pages/series.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">RA</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
           </nav>
 
       <div class="container pt-5 pb-5">
-        <h1 class="text-center tracking-in-expand">Series</h1>
+        <h1 class="titulo text-center tracking-in-expand">Series</h1>
         <p class="parrafo text-center">Si te gusta seguir el ritmo de varias historias en una y tienes tiempo (o te inventas tiempo) para verlas, te damos las mejores opciones de series para que puedas revisar.</p>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
@@ -117,7 +117,7 @@
       </div>
 
       <footer>
-        <div class="footertext text-center text-bg-dark">
+        <div class="footertext text-center">
           <h3> RA: Recomendaciones Anónimas</h2>
           <h4>2023. Todos los derechos reservados</h3>
           <a href="https://instagram.com"><i class="bi bi-instagram"></i></a>
