--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">RA</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,8 +44,8 @@
 
         <main>
             <section class="container pt-5 pb-5">
-                <h1 class="text-center tracking-in-expand">Contacto</h1>
-            <p class="text-center">¿Quieres más información o tienes alguna sugerencia?¡Las esperamos! Completa los siguientes datos.</p>
+                <h1 class="titulo text-center tracking-in-expand">Contacto</h1>
+            <p class="parrafo text-center">¿Quieres más información o tienes alguna sugerencia?¡Las esperamos! Completa los siguientes datos.</p>
                 <div class="row">
                     <div class="col-md-12">
                         <form action="">
@@ -67,6 +67,14 @@
                 </div>
             </section>
         </main>
+
+        <footer>
+          <div class="footertext text-center">
+            <h3> RA: Recomendaciones Anónimas</h2>
+            <h4>2023. Todos los derechos reservados</h3>
+            <a href="https://instagram.com"><i class="bi bi-instagram"></i></a>
+          </div>
+        </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     </body>
