--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">RA</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,7 @@
           </nav>
 
           <div class="container pt-5 pb-5">
-            <h1 class="text-center tracking-in-expand">Sobre Recomendaciones Anónimas</h1>
+            <h1 class="titulo text-center tracking-in-expand">Sobre Recomendaciones Anónimas</h1>
             <p class="parrafo text-center">Lo sabemos, deberíamos mantenernos Anónimos, mas no soportamos la idea de que no sepan con quiénes te estás contactando. Por lo anterior, hemos decidido sacarnos fotos con lentes de sol, para que nos pongas una cara incompleta y dejamos nuestros pseudónimos para que puedas identificarnos.</p>
                 <div class="row">
                     <div class="col-md-4">
@@ -75,7 +75,7 @@
           </div>
 
           <section class="container pb-5">
-            <h1 class="text-center">¿De dónde somos?</h1>
+            <h1 class="titulo text-center">¿De dónde somos?</h1>
               <div class="row">
                 <div class="col-md-4">
                     <p class="parrafo">
@@ -98,7 +98,7 @@
           </section>
 
           <footer>
-            <div class="footertext text-center text-bg-dark">
+            <div class="footertext text-center">
               <h3> RA: Recomendaciones Anónimas</h2>
               <h4>2023. Todos los derechos reservados</h3>
               <a href="https://instagram.com"><i class="bi bi-instagram"></i></a>
