--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -67,7 +67,7 @@
                           <img src="../imagenes/hombrelentes.jpg" class="card-img-top rounded-circle w-50 mt-4" alt="...">
                           <div class="card-body">
                             <h5 class="card-title">Artista Matías</h5>
-                            <p class="card-text">Siempre estoy en busca de nuevas oportunidades para crear imágenes, collages o arte, cualquiera sea.</p>
+                            <p class="card-text">Siempre estoy en busca de nuevas oportunidades para crear imágenes, collages o cuadros, cualquiera sea.</p>
                           </div>
                         </div>
                     </div>
