--- a/pages/series.html
+++ b/pages/series.html
@@ -45,13 +45,59 @@
         <p class="parrafo text-center">Si te gusta seguir el ritmo de varias historias en una y tienes tiempo (o te inventas tiempo) para verlas, te damos las mejores opciones de series para que puedas revisar.</p>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/serie1.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Serie 1</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title text-center pt-5">24 (2001-2010; 2014)</h5>
+                <p class="card-text text-center">Jack Bauer trabaja para la agencia de la Unidad Anti-Terrorista de Los Ángeles, y se embarca constantemente en misiones en las que se enfrenta a todo aquello que amenaza la seguridad de su país. Despiadado en su trabajo, Bauer siempre ha hecho cualquier cosa por conseguir sus objetivos en las misiones que le encomiendan. Su vida da un giro inesperado cuando su esposa e hija son secuestradas. Bauer es chantajeado para que asesine al Senador David Palmer, el primer candidato afroamericano a la presidencia de los Estados Unidos, a cambio de la vida de su familia. De esta forma, se ve envuelto en una misión contrarreloj en la que debe salvar a su mujer y su hija, así como garantizar la seguridad del Senador y de los Estados Unidos.</p>
+                <p class="card-text"><small class="text-muted">Resumen de: https://www.sensacine.com/series/serie-58/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="max-width: 1320px;">
+          <div class="row g-0">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/serie2.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-center pt-5">Rockefeller Plaza (2006-2013)</h5>
+                <p class="card-text text-center">Liz Lemon es la guionista de un magazine de televisión de la NBC. La estrella del programa en el que trabaja, "The Girlie Show", es su amiga de toda la vida Jenna Maroney. Con éxito y fama, su vida es perfecta tal y como es. Al menos, hasta que el presidente del canal le llama a su despacho para darle una noticia: acaban de fichar a un nuevo directivo para el programa, Jack Donaghy. Lo que parece una buena estrategia para relanzar la audiencia, pronto se convierte en un problema para Liz, y es que deberá lidiar con el ego desmedido del actor y poner paz entre él y los veteranos del programa, como Jenna o sus compañeros guionistas.</p>
+                <p class="card-text"><small class="text-muted">Resumen de: https://www.sensacine.com/series/serie-813/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="max-width: 1320px;">
+          <div class="row g-0">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/serie3.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-center pt-5">A dos metros bajo tierra (2001-2005)</h5>
+                <p class="card-text text-center">El protagonista de este aclamado drama de la HBO es Nate Fisher Jr. cuyo padre, dueño de la funeraria que es el negocio familiar, acaba de morir y lega esta tanto a él como a su hermano David. La familia Fisher también está formada por la recién enviudada Ruth, y su hija Claire. Cada episodio comienza con una muerte -cualquier causa, desde un accidente en la piscina a un infarto-, y esa muerte, normalmente, establece el tono que tendrá el episodio haciendo a los protagonistas reflexionar sobre sus vidas, problemas, penas y alegrías, alentados por el eterno miedo a lo que pueda haber tras la muerte.</p>
+                <p class="card-text"><small class="text-muted">Resumen de: https://www.sensacine.com/series/serie-4/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card mb-3" style="max-width: 1320px;">
+          <div class="row g-0">
+            <div class="col-md-4 pt-5 pb-5">
+              <img src="../imagenes/serie4.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title text-center pt-5">El ala oeste de la Casa Blanca (1999-2006)</h5>
+                <p class="card-text text-center">Josiah Bartlet es un político implacable, que sabe lo que quiere y no se detiene ante nada para conseguirlo. Está casado con la doctora Abigail Anne y tiene tres hijas. Junto a su equipo de expertos y consejeros, gobierna desde el despacho Oval una de las naciones más poderosas y avanzadas del mundo. Pero su día a día está plagado de intrigas y problemas que debe afrontar de la mejor forma posible para salvaguardar el futuro de su país. Arropado por profesionales como su ayudante personal, Charlie Young, o la secretaria de prensa de la Casa Blanca, C.J. Cregg, Bartlet deberá enfrentarse no solo a amenazas extranjeras o a escándalos sociales, sino también a los problemas y trastornos que surgen en su vida privada y la de su equipo.</p>
+                <p class="card-text"><small class="text-muted">Resumen de: https://www.sensacine.com/series/serie-55/</small></p>
                 <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
               </div>
             </div>
@@ -59,56 +105,15 @@
         </div>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
+            <div class="col-md-4 pl-5 pt-5 pb-5">
+              <img src="../imagenes/serie5.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
             </div>
             <div class="col-md-8">
               <div class="card-body">
-                <h5 class="card-title">Serie 2</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3" style="max-width: 1320px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Serie 3</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3" style="max-width: 1320px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Serie 4</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card mb-3" style="max-width: 1320px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="../imagenes/pregunta.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Serie 5</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
+                <h5 class="card-title text-center pt-5">Alfred Hitchcock presenta (1955-1965)</h5>
+                <p class="card-text text-center">Esta serie antológica cuenta pequeñas historias, una distinta en cada episodio. Los misterios son recreados por actores que ahondan en una trama llena de intriga donde nada es lo que parece a simple vista. Todos los capítulos abren con una presentación de Alfred Hitchcock a los espectadores, y concluye con una lectura moral sobre la historia. NBC, recrea varios episodios antiguos a color y utiliza nuevos actores para hacerla más entretenida y atractiva, consiguiendo así modernizarla. En total se filmaron 76 episodios en color, incluso se colorearon las introducciones originales de Alfred Hitchcock, que había fallecido en 1980.</p>
+                <p class="card-text"><small class="text-muted">Resumen de: https://www.sensacine.com/series/serie-58/</small></p>
+                <p class="card-text pb-5"><small class="text-muted">Revisa el trailer <a href="#">acá</a>.</small></p>
               </div>
             </div>
           </div>
