--- a/pages/series.html
+++ b/pages/series.html
@@ -105,7 +105,7 @@
         </div>
         <div class="card mb-3" style="max-width: 1320px;">
           <div class="row g-0">
-            <div class="col-md-4 pl-5 pt-5 pb-5">
+            <div class="col-md-4 pt-5 pb-5">
               <img src="../imagenes/serie5.jpg" class="img-fluid rounded-start mt-4 mb-4" alt="...">
             </div>
             <div class="col-md-8">
